some small bugs fixed 1. fixed spacing in the top nav 2. fixed spacing issue in the airplane icon in the services section

--- a/TWP-ASS1/style.css
+++ b/TWP-ASS1/style.css
@@ -50,9 +50,8 @@ h3 {
 .first-nav {
   min-height: 10vh;
   background-color: var(--color-primary);
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  gap: 2rem;
   flex-wrap: wrap;
   position: relative;
   overflow: hidden;
@@ -67,8 +66,8 @@ header .logo img {
 }
 
 .nav-services {
-  width: 50%;
-  padding: 3rem;
+  width: 40%;
+  padding: 3rem 0;
   justify-content: center;
   align-items: center;
 }
@@ -79,7 +78,7 @@ header .logo img {
   text-align: left;
   flex-shrink: 0;
   flex-wrap: wrap;
-  margin-right: 10px;
+  padding-right: 20px;
 }
 
 .nav-card img {
@@ -581,12 +580,13 @@ button:active {
   }
 
   .nav-services {
-    width: 80%;
+    width: 85%;
     padding: 0.5rem;
   }
 
   .nav-card {
     flex-shrink: 1;
+    padding-right: 0;
     margin-right: 5px;
   }
 
